# django-filip

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
django_filip/: admin.py  apps.py  helpers.py  models.py  services.py
django_filip/connections/: __init__.py  api.py  base.py  exceptions.py  mssql.py  sftp.py
django_filip/core/: apps.py  tests.py
django_filip/hent/: apps.py
django_filip/migrations/: 0001_initial.py
django_filip/open/: apps.py
django_filip/pool/: apps.py
django_filip/send/: apps.py
django_filip/tests/: test_helpers.py
docs/: examples.md  structure.md
tests/: settings.py
utils/: sftp.py
