[project]
name = "django-filip"
version = "0.1.3"
description = "Utveksling av data mellom regnskapsprogram og nisjesystem"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Erlend D. Handeland", email = "erlend.dietrich.handeland@stavanger.kommune.no"}]
license = {text = "BSD-3-Clause"}
dependencies = [
    "cryptography>=44.0.2",
    "django>=4.2",
    "django-matthaios>=0.1.0",
    "paramiko>=3.5.1",
    "requests>=2.32.3",
]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
]

[project.urls]
Homepage = "https://github.com/stavangerkommune/django-filip"
Repository = "https://github.com/stavangerkommune/django-filip.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "ruff>=0.11.2",
]

[tool.hatch.build.targets.wheel]
packages = ["django_filip"]
