[project]
name = "django-filip"
version = "0.1.4"
description = "Exchanging data between different systems."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Erlend D. Handeland", email = "erlend.dietrich.handeland@stavanger.kommune.no"}]
license = {text = "BSD-3-Clause"}
dependencies = [
    "cryptography>=44.0.2",
    "django-fernet-encrypted-fields>=0.3.0",
    "paramiko>=3.5.1",
    "pymssql>=2.3.2",
    "requests>=2.32.3",
    "requests-ratelimiter>=0.8.0",
]

classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
]

[project.urls]
Homepage = "https://github.com/stavangerkommune/django-filip"
Repository = "https://github.com/stavangerkommune/django-filip.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "django>=5.2,<5.3",
    "pytailwindcss>=0.2.0",
    "pytest>=8.3.5",
    "pytest-django>=4.10.0",
    "ruff>=0.13.1",
]

[tool.ruff]
line-length = 125

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.basedpyright]
typeCheckingMode = "standard"

[tool.hatch.build.targets.wheel]
packages = ["django_filip"]
